styles.css
/* ... */
/* page entiere */

body {
    margin: auto;
}

.flex-container { 
    font-family: "Raleway-Medium";
    /*width: 95%;*/
    margin: auto;
    max-width: 1440px;
}

.flex-container a:visited {
    color: black;
}

h2 {
    font-size: 20px;
    font-family: "Raleway-Bold";
}

p {
    font-size: 95%;
}

/* header */

header { 
    display: flex;
    justify-content: space-between;
    padding-top: 20px;
    padding-bottom: 20px;
}

    /* logo */

header .logo { 
    display: flex;
    flex-direction: row;
}

.logo img {
    width: 36% ;
}

    /* navbar */

nav ul {
    list-style-type: none;
    display: flex;
}

li a {
    padding: 37px 50px 43px 50px ;
    color: black;
}

a {
    text-decoration: none;
    color: black;
}

.menu a:hover {
    color: #0065FC;
}

li a:hover {
    border-top: #0065FC;
    border-top-style: solid ;
}

.menu { 
    display: flex;
    align-items: center;
    font-size: 20px;
}

.nav-inscription {
    padding-left: 50px;
    font-weight: bold;
}

.nav-inscription a {
    color: #0065FC;
}

/*MAIN*/

main {
    width: 100%;
}

.main p { 
    margin-bottom: 3%;
}

    /* SEARCH BOX*/

form {
    padding-top: 10px;
}

form i {
    color: black;
}

.searchbox {
    display: flex;
    width: 80em;
}

.searchbox i { 
    float: left ;
    clear: both ;
    border-radius: 15px 0 0 15px;
    padding: 0.8em;
    background-color: #f2f2f2;
}

.searchbox span {
    background-color: #0065FC;
    color: white;
    padding: 15px 20px 15px 20px;
    font-weight: 300;
    border-top-right-radius: 15px;
    border-bottom-right-radius: 15px;
}

input[type=text] {
    width: 17%;
    padding: 1%;
    box-sizing: border-box;
    border: none;
    font-weight: bold;
    font-size: 18px;
    }

input[type=button], input[type=submit], input[type=reset] {
    background-color: #0065FC;
    border: none;
    color: white;
    padding: 16px 32px;
    text-decoration: none;
    margin: 4px 2px;
    cursor: pointer;
    }

.recherche { 
    height: 30% ;
    padding-bottom: 1% ;
    color: Black;
}

.recherche  div p {
    margin-top:-10px
}

    /* FILTRES */

.champs-filtres { 
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    padding-top: 30px;
    font-weight: bold;
    font-family: "Raleway-Medium";
    font-weight:600;
    align-items: center;
    width: 70%;
}

.champs-filtres p {
    align-self: flex-end;
    font-size: 20px;
}

.champs-filtres a {
    margin: 78px;
    font-style: normal;
    color: black;
    text-decoration: none;
    border-radius: 50%;
    border-color: #DEEBFF;
    border-style: solid;
}


.filtre {
    padding: 0px 2% 0px 0px;
    border: solid;
    border-width: medium;
    border-color: lightgrey;
    border-radius: 2em;
    border-width: 2px;
    border-left-style: none;
}

.filtre i {
    border: solid;
    border-style: none;
    border-radius: 21px;
    background-color: #DEEBFF;
    padding: 15px 14px 15px 14px;
    margin-right: 10px;
    color: #0065FC;
}

.filtre:hover {
    color: #0065FC;
}

.info {
    padding-top: 1em;
    padding-left: 10px;
    display: flex;
    flex-direction: row;
}

.info p {
    align-self: flex-end;
}

.info .fa-info {
    margin: 0 8px 12px 0;
    font-weight: 900;
    color: #0065FC;
    border-radius: 21px;
    border: #c3c3c3;
    border-style: solid;
    border-width: 2px;
    padding: 4px 10px 4px 10px;
    font-size: 1em;
}
  
i {
    color: #0065FC;
}


/* LISTE HEBERGEMENTS */

#listehebergements { 
    display: flex;
    justify-content: space-between;
    height: 40em ;
    width: 100%;
}

    /* HEBERGEMENTS */

.liste-offres figcaption p:first-child {
    margin-top: 5px;
}

.liste-offres figcaption p:nth-child(2) {
    margin-top: -10px;
    margin-bottom: 5px;
}

.liste-offres figcaption {
    margin-left: 2%;
    height: 70px;
}

.hebergements {
    background-color: #f2f2f2;
    border-radius: 20px;
    margin-right: 50px;
    width: 65%;
}

.hebergements h2 {
    margin-left: 3%;
}

.hebergements h2:first-child {
    margin-top: 20px;
    margin-bottom: -25px;
}

.liste-offres {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    width: 95%;
    height: 28em;
    margin-left: 1%;
    margin-top: 60px;
}

.liste-offres .offres {
    width: 30%;
    /*min-width: 200px;*/
}

.hebergements figure { 
    border-radius: 20px;
    padding: 6px;
}

.offres figure {
    background-color: white;
    box-shadow: 1px 1px 10px 2px #c3c3c3;
    width: 100%;
    margin: 0;
    height: 12em;
}

.offres figure img {
    width: 100% ;
    height: 130px;
    object-fit: cover;
    border-radius: 20px 20px 0 0 ;
}

.titre {
    font-weight: bold;
    font-size: 95%;
    margin-top: 10px;
}

.offre-populaire figure figcaption p i {
    font-size: 76%;
}

.offre-populaire figure figcaption p:last-child {
    margin-top: 25px;
}

.liste-offres figcaption i {
    font-size: 72%;
}

.empty-star i {
    color: lightgrey;
}

    /* POPULAIRES */

.populaires {
    display: flex;
    flex-direction: column;
    background-color: #f2f2f2;
    border-radius: 20px;
    width: 35%;
}

.titre-populaire {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    padding: 3px 12% 5px 40px;
}

.titre-populaire i {
    padding-top: 30px;
    color: rgb(5, 4, 4);
    
}

.liste-offres-populaires {
    display: flex;
    flex-direction: column;
    width: 100%;
}

.offre-populaire {
    width: 100%;
}

.offre-populaire figcaption p:first-child {
    margin-bottom: -80px;
}

.offre-populaire figcaption p:nth-child(2) {
    margin-top: 85px;
}

.offre-populaire figure {
    display: flex;
    background-color: white;
    width: 80%;
    box-shadow: 1px 1px 10px 2px #c3c3c3;
    border-radius: 20px;
    padding: 6px;
    height: 150px;
    margin: 10px 0 25px 35px;
}

.offre-populaire figure img {
    width: 40%;
    height: 150px;
    object-fit: cover;
    border-radius: 20px 0 0 20px;
}

.offre-populaire .img3 img {
    width: 44%;
}
/* ... */

